[gd_scene load_steps=9 format=3 uid="uid://txlml75bby3c"]

[ext_resource type="Script" uid="uid://kyfsrdm01e78" path="res://Scripts/Player/Player_Movement/player.gd" id="1_g8ua4"]
[ext_resource type="Script" uid="uid://bgfh65f2f47yy" path="res://Scripts/Scene_Scripts/scribe.gd" id="2_6jd4p"]
[ext_resource type="AudioStream" uid="uid://b6hm5uyy8o1wl" path="res://Assets/Audio/Footstep.mp3" id="2_tpuda"]
[ext_resource type="Script" uid="uid://10v411wc6wrf" path="res://Scripts/Player/Sound_Effects/Your footsteps.gd" id="3_wkglc"]
[ext_resource type="PackedScene" uid="uid://cjloa0b6fnii2" path="res://Scenes/Preset_Stuff/ui.tscn" id="4_xtk1p"]
[ext_resource type="PackedScene" uid="uid://w552lujgy4gq" path="res://Assets/Art_3D/Weapons for Itch with image texture.fbx_Arming_Sword.fbx" id="6_vdp5t"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lbdua"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_cauuo"]
height = 1.2

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_g8ua4")

[node name="Scribe" type="Node3D" parent="."]
script = ExtResource("2_6jd4p")

[node name="Standing_Collision_Shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_lbdua")

[node name="Crouching_Collision_Shape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.002, 0.6, 0.007)
shape = SubResource("CapsuleShape3D_cauuo")

[node name="Your footsteps" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -9.31323e-10, 0)
stream = ExtResource("2_tpuda")
volume_db = 1.0
script = ExtResource("3_wkglc")

[node name="RayCast" type="RayCast3D" parent="."]
transform = Transform3D(-1, 6.46145e-05, -2.55331e-05, -6.4613e-05, -1, -5.95361e-06, -2.55368e-05, -5.93757e-06, 1, 0, 0, 0)
target_position = Vector3(0, -2, 0)

[node name="RayCastLeft" type="RayCast3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, 0.6, 0)

[node name="RayCastRight" type="RayCast3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 1, 0)
target_position = Vector3(0, -0.6, 0)

[node name="RayCastLeftBottum" type="RayCast3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.2, 0)
target_position = Vector3(0, 0.6, 0)

[node name="RayCastRightBottum" type="RayCast3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.2, 0)
target_position = Vector3(0, -0.6, 0)

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="FirstPersonCamera3D" type="Camera3D" parent="head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0232329, 0.017306, -0.00383997)
current = true

[node name="UI" parent="head/FirstPersonCamera3D" instance=ExtResource("4_xtk1p")]

[node name="RayCastInteractions" type="RayCast3D" parent="head/FirstPersonCamera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0232329, -0.0676738, 0.00383997)
target_position = Vector3(0, 0, -3)
collision_mask = 16

[node name="RayCastAttack" type="RayCast3D" parent="head/FirstPersonCamera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0232329, -0.0676738, 0.00383997)
target_position = Vector3(0, 0, -2)
collision_mask = 4

[node name="Sword_Model" parent="head/FirstPersonCamera3D" instance=ExtResource("6_vdp5t")]
transform = Transform3D(-4.37114e-08, -1, 0, -4.37114e-08, 1.91069e-15, -1, 1, -4.37114e-08, -4.37114e-08, 0.496326, -0.253377, -0.570781)
